testdata/baselines/reference/submodule/conformance/commonJSAliasedExport.errors.txt
bug43713.js(1,9): error TS2305: Module '"./commonJSAliasedExport"' has no exported member 'funky'.
commonJSAliasedExport.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
commonJSAliasedExport.js(7,16): error TS2339: Property 'funky' does not exist on type '(ast: any) => any'.


==== bug43713.js (1 errors) ====
    const { funky } = require('./commonJSAliasedExport');
            ~~~~~
!!! error TS2305: Module '"./commonJSAliasedExport"' has no exported member 'funky'.
    /** @type {boolean} */
    var diddy
    var diddy = funky(1)
    
    
==== commonJSAliasedExport.js (2 errors) ====
    const donkey = (ast) =>  ast;
    
    function funky(declaration) {
        return false;
    }
    module.exports = donkey;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.funky = funky;
                   ~~~~~
!!! error TS2339: Property 'funky' does not exist on type '(ast: any) => any'.
    